crates/mori-checker/src/snapshots/mori_checker__tests__arithmetic_on_a_string.snap
---
source: crates/mori-checker/src/tests.rs
description: "Code:\n\nprofile \"moriarty-beta/1\";\nagreement Values {\n  const label = \"fee\" + 1;\n}\n"
---
mori::check::not_a_number

  × I cannot add a string.
   ╭─[test.mori:3:17]
 2 │ agreement Values {
 3 │   const label = "fee" + 1;
   ·                 ──┬──
   ·                   ╰── this is a string
 4 │ }
   ╰────
  help: Arithmetic works only on plain numbers and amounts.
