crates/mori-checker/src/snapshots/mori_checker__tests__bridge_crosses_domains_only_at_its_endpoints.snap
---
source: crates/mori-checker/src/tests.rs
description: "Code:\n\nprofile \"moriarty-beta/1\";\nagreement Bridge {\n  domain Preview = { id: \"preview\", chain: \"midnight\", network: \"preview\" };\n  domain Cardano = { id: \"cardano\", chain: \"cardano\", network: \"mainnet\" };\n  asset USD = { domain: Preview, id: \"usd\", scale: 2, representation: \"native\" };\n  account alice = { domain: Preview, id: \"alice\" };\n  const out = bridge.escrow(owner: alice, amount: 5 USD, destination: Cardano, claim_id: \"c1\");\n}\n"
---
Preview = domain Preview
Cardano = domain Cardano
USD = asset USD
alice = account alice
out = bridge.escrow(owner: account alice, amount: 5.00 USD (500), destination: domain Cardano, claim_id: c1)
