crates/mori-checker/src/snapshots/mori_checker__tests__duplicate_declaration.snap
---
source: crates/mori-checker/src/tests.rs
description: "Code:\n\nprofile \"moriarty-beta/1\";\nagreement Invoice {\n  const price = 10;\n  const price = 12;\n}\n"
---
mori::check::duplicate_name

  × `price` is declared twice.
   ╭─[test.mori:4:9]
 2 │ agreement Invoice {
 3 │   const price = 10;
   ·         ──┬──
   ·           ╰── first declared here
 4 │   const price = 12;
   ·         ──┬──
   ·           ╰── declared again here
 5 │ }
   ╰────
  help: Each declaration and action in an agreement needs its own name.
