crates/mori-checker/src/snapshots/mori_checker__tests__failed_declarations_do_not_cascade.snap
---
source: crates/mori-checker/src/tests.rs
description: "Code:\n\nprofile \"moriarty-beta/1\";\nagreement Invoice {\n  const base = missing;\n  const price = base + 1;\n  const total = price * 2;\n}\n"
---
mori::check::unknown_name

  × I cannot find a declaration named `missing`.
   ╭─[test.mori:3:16]
 2 │ agreement Invoice {
 3 │   const base = missing;
   ·                ───┬───
   ·                   ╰── not declared above
 4 │   const price = base + 1;
   ╰────
  help: Declare `missing` above this line. A declaration can only use the
        names declared above it.
